feat: new version

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi" dir="ltr">
   <head>
     <title>Komayo - Câu chuyện về một cuộc gặp gỡ xung quanh Ogi</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
     <meta name="keywords" content="Ogi, Trò chơi chiến lược, Shogi, Komayo, Regency Bar">
@@ -20,7 +21,7 @@
     <meta property="og:description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
     <meta property="og:image" content="https://vi.komayo.page/img/komayo.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo - Récit d'une Rencontre autour du Ogi">
+    <meta name="twitter:title" content="Komayo - Câu chuyện về một cuộc gặp gỡ xung quanh Ogi">
     <meta name="twitter:description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
     <meta name="twitter:image" content="https://vi.komayo.page/img/komayo.jpeg">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
