--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="vi" dir="ltr">
   <head>
-    <title>Komayo - Câu chuyện về một cuộc gặp gỡ xung quanh Ogi</title>
+    <title>Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
-    <meta name="keywords" content="Ogi, Trò chơi chiến lược, Shogi, Komayo, Regency Bar">
+    <meta name="description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
+    <meta name="keywords" content="Ối, Trò chơi chiến lược, Sôgi, Komayo, Quán bar chính quyền">
     <meta property="og:title" content="Ogi - Cuộc gặp gỡ bí ẩn tại một quán bar ở Osaka">
     <meta property="og:type" content="article">
     <meta property="article:published_time" content="2023-06-11">
     <meta property="article:modified_time" content="2023-06-17">
     <meta property="article:author" content="Cyril Kato">
-    <meta property="article:section" content="Câu chuyện gặp gỡ">
-      <meta property="article:tag" content="Ogi">
+    <meta property="article:section" content="Chuyện hẹn hò">
+      <meta property="article:tag" content="Ối">
       <meta property="article:tag" content="Trò chơi chiến lược">
-      <meta property="article:tag" content="Shogi">
+      <meta property="article:tag" content="Sôgi">
       <meta property="article:tag" content="Komayo">
-      <meta property="article:tag" content="Regency Bar">
+      <meta property="article:tag" content="Quán bar chính quyền">
     <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
+    <meta property="og:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
     <meta property="og:image" content="https://vi.komayo.page/img/komayo.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo - Câu chuyện về một cuộc gặp gỡ xung quanh Ogi">
-    <meta name="twitter:description" content="Khám phá câu chuyện hấp dẫn về cuộc gặp gỡ với người chơi Ogi bí ẩn tại Bar Regency ở Osaka. Một lời tưởng niệm xúc động dành cho vẻ đẹp của trò chơi của các vị vua và hào quang mê hoặc của Komayo.">
+    <meta name="twitter:title" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi">
+    <meta name="twitter:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
     <meta name="twitter:image" content="https://vi.komayo.page/img/komayo.jpeg">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/" />
@@ -59,78 +59,86 @@
     <main>
       <article>
   <header>
-    <h1>Komayo: Tiếng vọng huyền bí của trò chơi Ogi</h1>
+    <h1>Komayo: Tiếng vang huyền bí của trò chơi Ogi</h1>
     <blockquote>
-      I want to say thank you to Komayo. She taught me a very interesting strategy game. I will tell our meeting. It is a memory that I really like and I want to share it here.
+      Tôi muốn dành một chút thời gian để bày tỏ lòng biết ơn của mình tới Komayo vì đã giới thiệu cho tôi trò chơi chiến lược hấp dẫn này. Sự quyến rũ và bí ẩn của nó đã để lại ấn tượng lâu dài trong cuộc đời tôi. Sau đây là câu chuyện về cuộc gặp gỡ của chúng tôi, một kỷ niệm quý giá mà tôi muốn chia sẻ qua những dòng này.
 
     </blockquote>
   </header>
   <section>
-    <h2>The Road to the Unknown</h2>
+    <h2>Thoát khỏi văn phòng</h2>
 
-<p>The day is over and I leave my job. I&#39;m in Osaka and I breathe the fresh evening air. The city is calm and I feel peaceful.</p>
+<p>Sau một ngày dài sống trong bầu không khí khô khan và vô vị tại văn phòng của tôi, cuối ngày được chờ đợi từ lâu cuối cùng cũng đã đến, giống như một sự giải thoát. Rồi ngày nhường chỗ cho hoàng hôn, và tôi bỏ lại sau lưng chiếc điều hòa nhân tạo lạnh lẽo để đắm mình trong làn gió đêm Osaka mềm mại, tràn đầy sinh lực.</p>
 
-<p><img src="img/1.jpeg" alt="A photo of the city of Osaka at night. You can see skyscrapers and their lights shine in the dark."></p>
+<p>Sự điên cuồng ban ngày, vô nghĩa và nặng nề, đang dần phai nhạt, nhường chỗ cho sự thanh thản về đêm. Những suy nghĩ của tôi, lộn xộn với sự vất vả không thú vị trong ngày, bắt đầu rõ ràng khi đối mặt với sự bao la đầy sao và sự tĩnh lặng yên tĩnh của thành phố.</p>
 
-<p>I walk in the streets. The buildings are big and bright. They are beautiful at night.</p>
+<p><img src="img/1.jpeg" alt="Thành phố Osaka lúc hoàng hôn. Những tòa nhà chọc trời mọc lên, bóng của chúng trải dài trên đại dương nhựa đường, ánh đèn của các tòa nhà lấp lánh như những vì sao."></p>
 
-<p>I go through a lively neighborhood with restaurants and people talking. Even though I&#39;m tired, I want to do something interesting. Then, I notice a bar called the Regency Bar. It&#39;s a place where people play shogi.</p>
+<p>Tôi để mình được dẫn đi qua những ngõ hẻm chằng chịt của thành phố. Sự đơn điệu trong ngày dường như tan biến khắp mọi ngóc ngách, thay vào đó là sự bí ẩn của những điều chưa biết. Hình bóng mềm mại, chào đón của những tòa nhà chọc trời dưới tấm màn đêm, ánh đèn lấp lánh của chúng trên nền trời bê tông, tương phản với sự hiện diện đáng sợ của chúng vào ban ngày.</p>
 
-<p>I feel a desire to enter the bar. I want to take up a challenge and relax a little.</p>
+<p>Không khí sôi động của những con hẻm mua sắm, mùi thơm của những quán ăn ven đường và tiếng thì thầm của những cuộc trò chuyện về đêm đã tạo nên một bức tranh đô thị đầy phấn khích. Tâm trí tôi, mặc dù kiệt sức, vẫn tìm kiếm một thử thách trí tuệ, một sự phân tâm khỏi những lo lắng trong ngày. Đó là lúc tôi nhìn thấy một bảng hiệu kín đáo, Bar de la Régence, một địa điểm nổi tiếng nơi những kỳ thủ shogi tài năng và lừng lẫy nhất trong thời đại của họ đã từng đối đầu với nhau.</p>
 
-  </section>
-  <section>
-    <h2>The Game Bar</h2>
-
-<p>I enter the Regency Bar. It&#39;s a quiet place with soft light. People here are playing shogi.</p>
-
-<p>I order a glass of sake. I look around. I smell the wood and incense. I hear the shogi pieces moving and people talking softly.</p>
-
-<p>There are men and women of all ages playing shogi. They are focused on their game. They look happy, sad or nervous with each move.</p>
-
-<p>I see a woman alone at a table. She is beautiful and calm. I am curious about her. I go to her, I smile and I ask her if she wants to play shogi with me.</p>
-
-<p><img src="img/2.jpeg" alt="A woman is sitting alone at a table in a corner of the bar. She is beautiful and mysterious."></p>
+<p>Ẩn mình trong con hẻm im lặng này, thánh đường này tự dâng hiến cho tôi, thì thầm trong tâm trí tôi tiếng gọi tinh tế của trò chơi. Âm vang của sự tùy ý của nó, cùng với khả năng của một trò chơi, vang vọng trong tôi như một lời thì thầm nhẹ nhàng, lôi cuốn một sự cám dỗ thấm nhuần với sự bí ẩn và tò mò.</p>
 
   </section>
   <section>
-    <h2>A Different Game</h2>
+    <h2>Hang ổ của Đảng</h2>
 
-<p>She smiled when I asked to play.</p>
+<p>Ánh sáng nhẹ nhàng, tinh tế của Bar de la Régence chào đón tôi, bầu không khí ấm áp gợi lên cảm giác yên bình. Sự thanh bình của nơi này tràn ngập bởi diễn biến của nhiều ván cờ shogi, trò chơi chắc chắn đã làm sống động những buổi tối của nhiều thế hệ người chơi đang tìm kiếm lối thoát.</p>
 
-<p>She took out a game board. It was hidden under a cloth. I was surprised. The board was smaller than usual. It had fewer squares and pieces. Instead of having 9x9 squares like normal shogi, it had 8x8 squares. There were also only 18 pieces for each player. Before I could ask a question, she began to explain. She said this game was called ogi.</p>
+<p>Trước khi hòa mình vào thế giới của trò chơi, tôi gọi một ly rượu sake tại quầy. Sàn gỗ cổ kính phản đối mềm mại dưới chân tôi, trong khi mắt tôi thích nghi với ánh sáng mờ ảo. Âm thanh nhẹ nhàng của quân cờ shogi, tiếng thì thầm trò chuyện và tiếng xào xạc của người hâm mộ đã tạo thêm nét huyền bí cho bầu không khí. Mùi thơm của gỗ cổ xưa, trộn lẫn với hương trầm, xoa dịu các giác quan của tôi và chuẩn bị cho tôi bước vào cuộc đấu tranh trí tuệ sắp tới.</p>
 
-<p><img src="img/3.jpeg" alt="The woman explains the rules of the ogi game."></p>
+<p>Những người bảo trợ, đàn ông và phụ nữ ở mọi lứa tuổi, say mê trò chơi shogi của họ. Mỗi người thể hiện theo cách riêng của mình sự căng thẳng, niềm vui hay sự thất vọng liên quan đến mỗi cú đánh được thực hiện. Đó là một vở ballet im lặng của các chiến lược và trí thông minh diễn ra trước mắt tôi.</p>
 
-<p>She talked about a special piece. It was the princess piece. She said that this piece made the game more dynamic. When she saw my surprise, she smiled. Then, she started placing the pieces on the board.</p>
+<p>Đang tìm đối thủ cho buổi tối, tôi bắt gặp một người phụ nữ đang ngồi một mình ở một chiếc bàn vắng vẻ. Sự hiện diện lặng lẽ và vẻ đẹp tinh tế của cô ấy đã khơi gợi trí tò mò của tôi. Bước đi quả quyết nhưng kín đáo, tôi tiến lại gần, phác một nụ cười lịch sự và ngỏ ý muốn chơi với anh ta.</p>
 
-<p>As she placed the pieces, I saw something different. There were towers in the corners of the board. She explained that these towers replaced the lances of the normal shogi.</p>
-
-<p>When all the pieces were on the board, I was very excited. I really wanted to play this new game. And I wanted to know more about this mysterious woman.</p>
+<p><img src="img/2.jpeg" alt="Một người phụ nữ bí ẩn ngồi một mình tại bàn cờ shogi trong một hốc kín đáo của quán bar. Ánh sáng và bóng tối làm nổi bật nét thanh tú trên các đường nét và ánh sáng lấp lánh của đôi mắt cô ấy."></p>
 
   </section>
   <section>
-    <h2>The Game Test</h2>
+    <h2>Buổi học đêm</h2>
 
-<p>The clock is ticking. The silence is only broken by the sound of the pieces moving on the board. The pieces move with determination. The princess leads the game. The silence of the game fills the room. It&#39;s very intense.</p>
+<p>Đáp lại đề nghị của tôi là một nụ cười sáng bừng trên khuôn mặt, một sự chấp nhận ngầm không cần lời nói.</p>
 
-<p>The woman plays very well. When she captured one of my pieces, she could put it back on the board to play it as one of her own pieces. Every move she makes is a lesson for me. She pays a lot of attention to each piece.</p>
+<p>Với sự duyên dáng bất ngờ, cô mở bảng trò chơi, trước đây được giấu dưới một tấm vải lụa. Ánh mắt của tôi ngay lập tức bắt gặp trên bề mặt chơi, thật bất ngờ, có vẻ nhỏ gọn hơn bình thường. Đó không phải là shogiban truyền thống mà tôi từng thấy, mà là một ô vuông thân mật hơn gồm 8 ô vuông trên một cạnh. Trước khi tôi có thể diễn tả sự ngạc nhiên của mình, người lạ thanh lịch đã dẫn đầu giải tỏa sự bối rối của tôi, giọng nói của cô ấy hòa vào không khí xung quanh như một làn gió mùa hè nhẹ nhàng.</p>
 
-<p>I keep playing. I move my pieces with a lot of energy. I defend my king. But with each move, I feel more tired. My eyes are getting heavy.</p>
+<p>“Đó là một ogi, trò chơi của các vị vua,” cô tuyên bố một cách tự tin. &quot;Mỗi người chúng ta có một bộ 18 mảnh ở đó để bắt đầu trò chơi.&quot; Một cái nhìn thích thú sáng lên trong mắt cô khi cô tiết lộ những chi tiết hấp dẫn này.</p>
 
-<p>Finally, I can&#39;t stay awake anymore. I&#39;m too tired. Everything is getting black. The last thing I see is the woman&#39;s smile. She is very happy.</p>
+<p><img src="img/3.jpeg" alt="Người phụ nữ giải thích các quy tắc của ogi với sự thanh thản nhất định và sự tao nhã dễ dàng. Ánh mắt của anh ấy sáng lên với sự nhiệt tình, cử chỉ của anh ấy uyển chuyển và chắc chắn."></p>
 
-<p><img src="img/4.jpeg" alt="The man falls asleep at the game table. The woman smiles, she seems satisfied."></p>
+<p>“Trong bàn cờ bóng tối này, một người nổi bật vì vẻ uy nghiêm rõ ràng của nó,” cô chỉ ra, chỉ vào quân cờ trung tâm đặc biệt sang trọng. &quot;Đây là công chúa. Được tô điểm bằng phẩm giá của kẻ ngốc và sự tự do vô hạn của kỵ sĩ, cô ấy chủ trì ogiban một cách khéo léo và quyền lực, thổi một làn gió lãng mạn vào biến thể đương đại của shogi.&quot;</p>
+
+<p>Nụ cười của anh mở rộng trước sự ngạc nhiên của tôi. Một tia sáng trêu chọc ánh lên trong mắt anh ta, một sự tinh nghịch chỉ làm tăng thêm sự bí ẩn xung quanh anh ta. Cô ấy bắt đầu đặt quân cờ lên bàn cờ, những ngón tay nhanh nhẹn và chính xác của cô ấy làm sinh động chiến trường tương lai của chúng tôi.</p>
+
+<p>Khi cô ấy sắp xếp các mảnh, tôi nhận thấy một sự khác biệt khác: những tòa tháp đứng ở các góc của ogiban. “Những ngọn giáo truyền thống được thay thế bằng những ngọn tháp này,” cô ấy giải thích như thể đọc được suy nghĩ của tôi, “mang đến một chiều kích mới cho cuộc vui của chúng ta.”</p>
+
+<p>Các quân cờ giờ đã được bày ra, mọi quân, mọi tướng, mọi quân tốt được xếp thành một hàng hài hòa hoàn hảo. Dự đoán trận chiến sắp tới, tôi thấy mình bị cuốn hút một cách khó cưỡng vào trò chơi ghép hình mới được tiết lộ này, khiến mọi thứ trở nên hấp dẫn hơn bởi ánh sáng lung linh vàng của các mảnh ghép và ánh mắt lấp lánh của kẻ thù bí ẩn của tôi.</p>
 
   </section>
   <section>
-    <h2>A Surprising Awakening</h2>
+    <h2>Phiên tòa của Thần</h2>
 
-<p>I was asleep, lost in the dark. Then, little by little, I woke up. It was morning. I opened my eyes. The bar had hardly changed.</p>
+<p>Tiếng tích tắc của đồng hồ đánh dấu thời gian trôi qua, trong khi sự im lặng của trận chiến chỉ bị gián đoạn bởi tiếng động nhẹ của các quân cờ trên bàn cờ. Vị giám mục di chuyển với quyết tâm, hiệp sĩ dũng cảm nhảy lên và công chúa thống trị chiến trường với hiệu quả ấn tượng. Nhịp điệu gần như không thể nhận thấy của cuộc chiến tràn ngập căn phòng, tạo cho nó một sự căng thẳng hữu hình.</p>
 
-<p>The game board was still there, just like the day before. But the woman was not there. She was gone. Her absence left a void. The bar was very quiet.</p>
+<p>Với kỹ năng đáng kinh ngạc, kẻ thù bí ẩn của tôi đã điều khiển các quân cờ của mình. Những người bị bắt, thay vì bị loại bỏ, đã được đưa trở lại một cách khéo léo, nhảy dù sau hàng ngũ của tôi, tạo ra một động lực thay đổi vào trận chiến. Mỗi nước cờ là một bài học về chiến thuật, quân cờ này nối với quân cờ khác bằng những sợi dây vô hình đan dệt với sự tỉ mỉ gần như phẫu thuật.</p>
 
-<p>I saw a piece of paper next to the game board. I took the paper. There was a word on it: &quot;Thank you&quot;. And a name: &quot;Komayo&quot;. This name was the last memory of the woman. I had spent an amazing evening with her, playing ogi at the Regency Bar.</p>
+<p>Tôi tiếp tục, xử lý các quân cờ của mình với quyết tâm mãnh liệt, chống lại cuộc tấn công dữ dội của anh ta bằng một hàng phòng thủ được bố trí cẩn thận. Tuy nhiên, mỗi quyết định dường như sử dụng năng lượng dự trữ của tôi, mỗi động tác trở nên ngày càng nặng nề hơn để thực hiện. Mí mắt tôi bắt đầu trĩu xuống, sự mệt mỏi đang cố gắng tiếp tục.</p>
+
+<p>Và khi tôi cố gắng để mở mắt, giấc ngủ, kẻ thù lén lút đó đã chiếm lấy. Cơ thể tôi kiệt quệ, ánh đèn quán bar nhảy múa trước mắt tôi tối sầm lại. Tôi chìm vào bóng tối êm dịu, hình ảnh cuối cùng ăn sâu vào ký ức tôi là nụ cười chiến thắng của kẻ thù bí ẩn của tôi, lấp lánh như vầng trăng xa trên bầu trời đen như mực.</p>
+
+<p><img src="img/4.jpeg" alt="Người đàn ông gục xuống vì mệt mỏi trên ogiban, một dấu hiệu của sự kiệt sức của anh ta. Người phụ nữ, với một nụ cười tinh tế trên khuôn mặt, dường như đã sẵn sàng rời đi."></p>
+
+  </section>
+  <section>
+    <h2>Tiếng vang của bình minh</h2>
+
+<p>Thời gian dường như đã bốc hơi, bị nuốt chửng bởi bóng tối bao trùm tâm trí tôi. Quá trình chuyển đổi sang bóng tối diễn ra suôn sẻ và không ồn ào, khiến tôi phải điều hướng trong màn sương mù hoang mang. Tâm trí tôi quay cuồng trong một biển bối rối, cố gắng thoát ra khỏi bóng tối.</p>
+
+<p>Như một con thuyền lạc trong đêm, cuối cùng tôi cũng tìm được đường về với ánh sáng ban ngày. Mắt tôi mở ra trong căn phòng gần như không thay đổi, tắm trong ánh bình minh dịu nhẹ. Chiếc ogiban vẫn đứng như tôi đã rời bỏ nó, một nhân chứng thầm lặng cho trận chiến đêm qua. Tuy nhiên, ghế đối thủ của tôi giờ đã bỏ trống, khí chất bí ẩn của người phụ nữ trẻ đã tan biến như một giấc mơ lúc rạng đông.</p>
+
+<p>Người ta cảm thấy sức nặng của sự vắng mặt của anh, một sự trống rỗng không thể xác định được khiến không khí trở nên nặng nề, căn phòng trở nên yên tĩnh hơn. Ánh mắt của tôi lướt qua ogiban và dừng lại ở một tờ giấy được gấp gọn gàng bên cạnh bàn trò chơi. Tôi hơi run cầm lấy nó.</p>
+
+<p>Một từ duy nhất được ghi ở đó, &quot;Cảm ơn&quot;, kèm theo một cái tên - &quot;Komayo&quot;. Một dấu ấn tao nhã, dấu tích cuối cùng của cuộc gặp gỡ thoáng qua nhưng ấn tượng này, được dành tại Bar de la Régence chơi ogi với Komayo khó nắm bắt và hấp dẫn.</p>
 
   </section>
 </article>
