feat: new version

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <meta property="article:tag" content="Quán bar chính quyền">
     <meta property="og:url" content="https://vi.komayo.page/">
     <meta property="og:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
-    <meta property="og:image" content="https://vi.komayo.page/img/komayo.jpeg">
+    <meta property="og:image" content="https://vi.komayo.page/img/komayo.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi">
     <meta name="twitter:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
-    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo.jpeg">
+    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/" />
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/" />
@@ -72,7 +72,7 @@
 
 <p>Sự điên cuồng ban ngày, vô nghĩa và nặng nề, đang dần phai nhạt, nhường chỗ cho sự thanh thản về đêm. Những suy nghĩ của tôi, lộn xộn với sự vất vả không thú vị trong ngày, bắt đầu rõ ràng khi đối mặt với sự bao la đầy sao và sự tĩnh lặng yên tĩnh của thành phố.</p>
 
-<p><img src="img/1.jpeg" alt="Thành phố Osaka lúc hoàng hôn. Những tòa nhà chọc trời mọc lên, bóng của chúng trải dài trên đại dương nhựa đường, ánh đèn của các tòa nhà lấp lánh như những vì sao."></p>
+<p><img src="img/1.webp" alt="Thành phố Osaka lúc hoàng hôn. Những tòa nhà chọc trời mọc lên, bóng của chúng trải dài trên đại dương nhựa đường, ánh đèn của các tòa nhà lấp lánh như những vì sao."></p>
 
 <p>Tôi để mình được dẫn đi qua những ngõ hẻm chằng chịt của thành phố. Sự đơn điệu trong ngày dường như tan biến khắp mọi ngóc ngách, thay vào đó là sự bí ẩn của những điều chưa biết. Hình bóng mềm mại, chào đón của những tòa nhà chọc trời dưới tấm màn đêm, ánh đèn lấp lánh của chúng trên nền trời bê tông, tương phản với sự hiện diện đáng sợ của chúng vào ban ngày.</p>
 
@@ -92,7 +92,7 @@
 
 <p>Đang tìm đối thủ cho buổi tối, tôi bắt gặp một người phụ nữ đang ngồi một mình ở một chiếc bàn vắng vẻ. Sự hiện diện lặng lẽ và vẻ đẹp tinh tế của cô ấy đã khơi gợi trí tò mò của tôi. Bước đi quả quyết nhưng kín đáo, tôi tiến lại gần, phác một nụ cười lịch sự và ngỏ ý muốn chơi với anh ta.</p>
 
-<p><img src="img/2.jpeg" alt="Một người phụ nữ bí ẩn ngồi một mình tại bàn cờ shogi trong một hốc kín đáo của quán bar. Ánh sáng và bóng tối làm nổi bật nét thanh tú trên các đường nét và ánh sáng lấp lánh của đôi mắt cô ấy."></p>
+<p><img src="img/2.webp" alt="Một người phụ nữ bí ẩn ngồi một mình tại bàn cờ shogi trong một hốc kín đáo của quán bar. Ánh sáng và bóng tối làm nổi bật nét thanh tú trên các đường nét và ánh sáng lấp lánh của đôi mắt cô ấy."></p>
 
   </section>
   <section>
@@ -104,7 +104,7 @@
 
 <p>“Đó là một ogi, trò chơi của các vị vua,” cô tuyên bố một cách tự tin. &quot;Mỗi người chúng ta có một bộ 18 mảnh ở đó để bắt đầu trò chơi.&quot; Một cái nhìn thích thú sáng lên trong mắt cô khi cô tiết lộ những chi tiết hấp dẫn này.</p>
 
-<p><img src="img/3.jpeg" alt="Người phụ nữ giải thích các quy tắc của ogi với sự thanh thản nhất định và sự tao nhã dễ dàng. Ánh mắt của anh ấy sáng lên với sự nhiệt tình, cử chỉ của anh ấy uyển chuyển và chắc chắn."></p>
+<p><img src="img/3.webp" alt="Người phụ nữ giải thích các quy tắc của ogi với sự thanh thản nhất định và sự tao nhã dễ dàng. Ánh mắt của anh ấy sáng lên với sự nhiệt tình, cử chỉ của anh ấy uyển chuyển và chắc chắn."></p>
 
 <p>“Trong bàn cờ bóng tối này, một người nổi bật vì vẻ uy nghiêm rõ ràng của nó,” cô chỉ ra, chỉ vào quân cờ trung tâm đặc biệt sang trọng. &quot;Đây là công chúa. Được tô điểm bằng phẩm giá của kẻ ngốc và sự tự do vô hạn của kỵ sĩ, cô ấy chủ trì ogiban một cách khéo léo và quyền lực, thổi một làn gió lãng mạn vào biến thể đương đại của shogi.&quot;</p>
 
@@ -126,7 +126,7 @@
 
 <p>Và khi tôi cố gắng để mở mắt, giấc ngủ, kẻ thù lén lút đó đã chiếm lấy. Cơ thể tôi kiệt quệ, ánh đèn quán bar nhảy múa trước mắt tôi tối sầm lại. Tôi chìm vào bóng tối êm dịu, hình ảnh cuối cùng ăn sâu vào ký ức tôi là nụ cười chiến thắng của kẻ thù bí ẩn của tôi, lấp lánh như vầng trăng xa trên bầu trời đen như mực.</p>
 
-<p><img src="img/4.jpeg" alt="Người đàn ông gục xuống vì mệt mỏi trên ogiban, một dấu hiệu của sự kiệt sức của anh ta. Người phụ nữ, với một nụ cười tinh tế trên khuôn mặt, dường như đã sẵn sàng rời đi."></p>
+<p><img src="img/4.webp" alt="Người đàn ông gục xuống vì mệt mỏi trên ogiban, một dấu hiệu của sự kiệt sức của anh ta. Người phụ nữ, với một nụ cười tinh tế trên khuôn mặt, dường như đã sẵn sàng rời đi."></p>
 
   </section>
   <section>
