--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
     <meta name="keywords" content="Ối, Trò chơi chiến lược, Sôgi, Komayo, Quán bar chính quyền">
-    <meta property="og:title" content="Ogi - Cuộc gặp gỡ bí ẩn tại một quán bar ở Osaka">
+    <meta property="og:title" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi">
     <meta property="og:type" content="article">
     <meta property="article:published_time" content="2023-06-11">
-    <meta property="article:modified_time" content="2023-06-17">
+    <meta property="article:modified_time" content="2023-06-20">
     <meta property="article:author" content="Cyril Kato">
     <meta property="article:section" content="Chuyện hẹn hò">
       <meta property="article:tag" content="Ối">
@@ -49,11 +49,53 @@
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/" />
     <link rel="canonical" href="https://vi.komayo.page/">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon-180.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
     <link rel="stylesheet" href="css/pico.min.css">
     <link rel="stylesheet" href="css/base.css">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ShortStory",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://vi.komayo.page/"
+        },
+        "inLanguage": "vi",
+        "headline": "Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi",
+        "description": "Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://vi.komayo.page/img/komayo.webp"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Kato"
+        },
+        "datePublished": "2023-06-11",
+        "dateModified": "2023-06-20",
+        "keywords": "Ối, Trò chơi chiến lược, Sôgi, Komayo, Quán bar chính quyền",
+        "articleSection": "Chuyện hẹn hò"
+      }
+    </script>
   </head>
   <body>
     <main>
