feat: new version

--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="vi" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
-    <title>Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi</title>
+    <title>La Partie Inachevée</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
-    <meta name="keywords" content="Ối, Trò chơi chiến lược, Sôgi, Komayo, Quán bar chính quyền">
-    <meta property="og:title" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi">
-    <meta property="og:type" content="article">
-    <meta property="article:published_time" content="2023-06-11">
-    <meta property="article:modified_time" content="2023-06-20">
-    <meta property="article:author" content="Cyril Kato">
-    <meta property="article:section" content="Chuyện hẹn hò">
-      <meta property="article:tag" content="Ối">
-      <meta property="article:tag" content="Trò chơi chiến lược">
-      <meta property="article:tag" content="Sôgi">
-      <meta property="article:tag" content="Komayo">
-      <meta property="article:tag" content="Quán bar chính quyền">
-    <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
-    <meta property="og:image" content="https://vi.komayo.page/img/komayo.webp">
+    <meta name="description" content="Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+">
+    <meta name="keywords" content="Ōgi, Jeu de stratégie, Shōgi, Komayō">
+    <meta property="og:title" content="Komayō: Les Échos Mystiques du Jeu d'Ōgi" />
+    <meta property="og:description" content="On raconte qu'au Japon, dans la région du Kansai, lors des soirs de pleine lune, une magnifique yōkai nommée Komayō apparaît et propose à des passants égarés de jouer une partie d'ōgi, une variante envoûtante du shōgi, un jeu traditionnel japonais.
+Lorsqu'ils acceptent, la partie commence, mais peu à peu, la fatigue les envahit et ils finissent par s'endormir, tandis que la mystérieuse femme absorbe leur énergie vitale.
+Pour retrouver leur salut, ces âmes errantes (yūrei) entament alors un long voyage animées par l'espoir de retrouver Komayō et de conclure les parties d'ōgi restées en suspens.
+Ce livre est le témoignage poignant de l'une d'entre elles." />
+    <meta property="og:image" content="https://vi.komayo.page/img/book-cover.webp" />
+    <meta property="og:url" content="https://amzn.eu/d/3b0mA0n" />
+    <meta property="og:type" content="book" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi">
-    <meta name="twitter:description" content="Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.">
+    <meta name="twitter:title" content="La Partie Inachevée">
+    <meta name="twitter:description" content="Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+">
     <meta name="twitter:image" content="https://vi.komayo.page/img/komayo.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/" />
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/" />
@@ -62,15 +58,14 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi"/>
+    <meta name="application-name" content="La Partie Inachevée"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-    <link rel="stylesheet" href="css/pico.min.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/base.css?a">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -80,8 +75,9 @@
           "@id": "https://vi.komayo.page/"
         },
         "inLanguage": "vi",
-        "headline": "Komayo - Câu chuyện về cuộc gặp gỡ quanh Ogi",
-        "description": "Khám phá câu chuyện hấp dẫn khi gặp gỡ người chơi Ogi bí ẩn tại Regency Bar ở Osaka. Một sự tôn vinh cảm động về vẻ đẹp của trò chơi vua chúa và hào quang mê hoặc của Komayo.",
+        "headline": "La Partie Inachevée",
+        "description": "Dans la lumière mystique de la pleine lune, découvrez l&#39;histoire de Komayō, une yōkai ensorcelante du folklore japonais. Séduisante et mortelle, elle attire les âmes égarées dans une partie de ōgi, absorbant leur énergie vitale et les condamnant à un tourment éternel. C&#39;est un récit d&#39;attraction fatale et de désir non contrôlé, un avertissement poignant contre les dangers de la tentation.
+",
         "image": {
           "@type": "ImageObject",
           "url": "https://vi.komayo.page/img/komayo.webp"
@@ -90,10 +86,10 @@
           "@type": "Person",
           "name": "Cyril Kato"
         },
-        "datePublished": "2023-06-11",
-        "dateModified": "2023-06-20",
-        "keywords": "Ối, Trò chơi chiến lược, Sôgi, Komayo, Quán bar chính quyền",
-        "articleSection": "Chuyện hẹn hò"
+        "datePublished": "2023-06-26",
+        "dateModified": "2023-06-27",
+        "keywords": "Ōgi, Jeu de stratégie, Shōgi, Komayō",
+        "articleSection": "Récits de rencontres"
       }
     </script>
   </head>
@@ -101,88 +97,18 @@
     <main>
       <article>
   <header>
-    <h1>Komayo: Tiếng vang huyền bí của trò chơi Ogi</h1>
-    <blockquote>
-      Tôi muốn dành một chút thời gian để bày tỏ lòng biết ơn của mình tới Komayo vì đã giới thiệu cho tôi trò chơi chiến lược hấp dẫn này. Sự quyến rũ và bí ẩn của nó đã để lại ấn tượng lâu dài trong cuộc đời tôi. Sau đây là câu chuyện về cuộc gặp gỡ của chúng tôi, một kỷ niệm quý giá mà tôi muốn chia sẻ qua những dòng này.
-
-    </blockquote>
+    <h1>La Partie Inachevée</h1>
   </header>
-  <section>
-    <h2>Thoát khỏi văn phòng</h2>
+  <p>On raconte qu&#39;au Japon, dans la région du Kansai, lorsque la pleine lune brille haut dans le ciel, une créature aux charmes ensorcelants fait son apparition, cherchant à attirer les passants égarés.</p>
 
-<p>Sau một ngày dài sống trong bầu không khí khô khan và vô vị tại văn phòng của tôi, cuối ngày được chờ đợi từ lâu cuối cùng cũng đã đến, giống như một sự giải thoát. Rồi ngày nhường chỗ cho hoàng hôn, và tôi bỏ lại sau lưng chiếc điều hòa nhân tạo lạnh lẽo để đắm mình trong làn gió đêm Osaka mềm mại, tràn đầy sinh lực.</p>
+<p>Belle et mystérieuse, Komayō séduit les infortunés avec son attrait irrésistible. Elle leur propose alors une partie de ōgi, une variante du jeu de stratégie traditionnel japonais shōgi. Ceux qui acceptent son invitation se trouvent bientôt emportés dans un tourbillon de jeu passionnant. Cependant, alors que la partie se poursuit, ils commencent à ressentir une fatigue étrange qui s&#39;infiltre progressivement dans leurs os, les obligeant finalement à succomber à un sommeil inéluctable.</p>
 
-<p>Sự điên cuồng ban ngày, vô nghĩa và nặng nề, đang dần phai nhạt, nhường chỗ cho sự thanh thản về đêm. Những suy nghĩ của tôi, lộn xộn với sự vất vả không thú vị trong ngày, bắt đầu rõ ràng khi đối mặt với sự bao la đầy sao và sự tĩnh lặng yên tĩnh của thành phố.</p>
+<p>C&#39;est durant ce sommeil profond que Komayō révèle sa véritable nature. Elle absorbe leur énergie vitale, laissant derrière elle seulement une coquille vide de son ancienne vitalité. Les âmes de ces victimes malheureuses, maintenant transformées en yūrei, sont condamnées à un voyage sans fin. Tourmentées par le désir irrésistible de revoir Komayō et l&#39;espoir de terminer leur partie inachevée de ōgi, elles errent éternellement dans un état de désir non réalisé et de regret inassouvi.</p>
 
-<p><img src="img/1.webp" alt="Thành phố Osaka lúc hoàng hôn. Những tòa nhà chọc trời mọc lên, bóng của chúng trải dài trên đại dương nhựa đường, ánh đèn của các tòa nhà lấp lánh như những vì sao."></p>
+<p>Komayō incarne ainsi les dangers de la tentation et la fatalité du désir non contrôlé. Les récits de ses victimes servent de mise en garde contre l&#39;attrait de l&#39;inconnu et la poursuite imprudente du plaisir. C&#39;est un avertissement qui résonne à travers les âges, un rappel de la fine ligne qui sépare le désir de la destruction.</p>
 
-<p>Tôi để mình được dẫn đi qua những ngõ hẻm chằng chịt của thành phố. Sự đơn điệu trong ngày dường như tan biến khắp mọi ngóc ngách, thay vào đó là sự bí ẩn của những điều chưa biết. Hình bóng mềm mại, chào đón của những tòa nhà chọc trời dưới tấm màn đêm, ánh đèn lấp lánh của chúng trên nền trời bê tông, tương phản với sự hiện diện đáng sợ của chúng vào ban ngày.</p>
+<p><img src="img/komayo.webp" alt="Cette illustration saisissante dépeint Komayō, une yōkai envoûtante du folklore japonais, captivée par une partie de ōgi sous la lumière argentée de la pleine lune. Sa beauté est presque surnaturelle, ses traits délicats brillent d&#39;une lueur éthérée qui contraste avec l&#39;obscurité environnante. À ses côtés, une victime sans méfiance gît endormie, visiblement épuisée par la partie de jeu. L&#39;énergie vitale semble s&#39;échapper lentement de lui, comme s&#39;il se fondait dans l&#39;ombre. La yōkai, quant à elle, semble à la fois fascinée et indifférente, perdue dans la stratégie de son jeu, symbolisant l&#39;attrait fatal et l&#39;indifférence cruelle de la tentation."></p>
 
-<p>Không khí sôi động của những con hẻm mua sắm, mùi thơm của những quán ăn ven đường và tiếng thì thầm của những cuộc trò chuyện về đêm đã tạo nên một bức tranh đô thị đầy phấn khích. Tâm trí tôi, mặc dù kiệt sức, vẫn tìm kiếm một thử thách trí tuệ, một sự phân tâm khỏi những lo lắng trong ngày. Đó là lúc tôi nhìn thấy một bảng hiệu kín đáo, Bar de la Régence, một địa điểm nổi tiếng nơi những kỳ thủ shogi tài năng và lừng lẫy nhất trong thời đại của họ đã từng đối đầu với nhau.</p>
-
-<p>Ẩn mình trong con hẻm im lặng này, thánh đường này tự dâng hiến cho tôi, thì thầm trong tâm trí tôi tiếng gọi tinh tế của trò chơi. Âm vang của sự tùy ý của nó, cùng với khả năng của một trò chơi, vang vọng trong tôi như một lời thì thầm nhẹ nhàng, lôi cuốn một sự cám dỗ thấm nhuần với sự bí ẩn và tò mò.</p>
-
-  </section>
-  <section>
-    <h2>Hang ổ của Đảng</h2>
-
-<p>Ánh sáng nhẹ nhàng, tinh tế của Bar de la Régence chào đón tôi, bầu không khí ấm áp gợi lên cảm giác yên bình. Sự thanh bình của nơi này tràn ngập bởi diễn biến của nhiều ván cờ shogi, trò chơi chắc chắn đã làm sống động những buổi tối của nhiều thế hệ người chơi đang tìm kiếm lối thoát.</p>
-
-<p>Trước khi hòa mình vào thế giới của trò chơi, tôi gọi một ly rượu sake tại quầy. Sàn gỗ cổ kính phản đối mềm mại dưới chân tôi, trong khi mắt tôi thích nghi với ánh sáng mờ ảo. Âm thanh nhẹ nhàng của quân cờ shogi, tiếng thì thầm trò chuyện và tiếng xào xạc của người hâm mộ đã tạo thêm nét huyền bí cho bầu không khí. Mùi thơm của gỗ cổ xưa, trộn lẫn với hương trầm, xoa dịu các giác quan của tôi và chuẩn bị cho tôi bước vào cuộc đấu tranh trí tuệ sắp tới.</p>
-
-<p>Những người bảo trợ, đàn ông và phụ nữ ở mọi lứa tuổi, say mê trò chơi shogi của họ. Mỗi người thể hiện theo cách riêng của mình sự căng thẳng, niềm vui hay sự thất vọng liên quan đến mỗi cú đánh được thực hiện. Đó là một vở ballet im lặng của các chiến lược và trí thông minh diễn ra trước mắt tôi.</p>
-
-<p>Đang tìm đối thủ cho buổi tối, tôi bắt gặp một người phụ nữ đang ngồi một mình ở một chiếc bàn vắng vẻ. Sự hiện diện lặng lẽ và vẻ đẹp tinh tế của cô ấy đã khơi gợi trí tò mò của tôi. Bước đi quả quyết nhưng kín đáo, tôi tiến lại gần, phác một nụ cười lịch sự và ngỏ ý muốn chơi với anh ta.</p>
-
-<p><img src="img/2.webp" alt="Một người phụ nữ bí ẩn ngồi một mình tại bàn cờ shogi trong một hốc kín đáo của quán bar. Ánh sáng và bóng tối làm nổi bật nét thanh tú trên các đường nét và ánh sáng lấp lánh của đôi mắt cô ấy."></p>
-
-  </section>
-  <section>
-    <h2>Buổi học đêm</h2>
-
-<p>Đáp lại đề nghị của tôi là một nụ cười sáng bừng trên khuôn mặt, một sự chấp nhận ngầm không cần lời nói.</p>
-
-<p>Với sự duyên dáng bất ngờ, cô mở bảng trò chơi, trước đây được giấu dưới một tấm vải lụa. Ánh mắt của tôi ngay lập tức bắt gặp trên bề mặt chơi, thật bất ngờ, có vẻ nhỏ gọn hơn bình thường. Đó không phải là shogiban truyền thống mà tôi từng thấy, mà là một ô vuông thân mật hơn gồm 8 ô vuông trên một cạnh. Trước khi tôi có thể diễn tả sự ngạc nhiên của mình, người lạ thanh lịch đã dẫn đầu giải tỏa sự bối rối của tôi, giọng nói của cô ấy hòa vào không khí xung quanh như một làn gió mùa hè nhẹ nhàng.</p>
-
-<p>“Đó là một ogi, trò chơi của các vị vua,” cô tuyên bố một cách tự tin. &quot;Mỗi người chúng ta có một bộ 18 mảnh ở đó để bắt đầu trò chơi.&quot; Một cái nhìn thích thú sáng lên trong mắt cô khi cô tiết lộ những chi tiết hấp dẫn này.</p>
-
-<p><img src="img/3.webp" alt="Người phụ nữ giải thích các quy tắc của ogi với sự thanh thản nhất định và sự tao nhã dễ dàng. Ánh mắt của anh ấy sáng lên với sự nhiệt tình, cử chỉ của anh ấy uyển chuyển và chắc chắn."></p>
-
-<p>“Trong bàn cờ bóng tối này, một người nổi bật vì vẻ uy nghiêm rõ ràng của nó,” cô chỉ ra, chỉ vào quân cờ trung tâm đặc biệt sang trọng. &quot;Đây là công chúa. Được tô điểm bằng phẩm giá của kẻ ngốc và sự tự do vô hạn của kỵ sĩ, cô ấy chủ trì ogiban một cách khéo léo và quyền lực, thổi một làn gió lãng mạn vào biến thể đương đại của shogi.&quot;</p>
-
-<p>Nụ cười của anh mở rộng trước sự ngạc nhiên của tôi. Một tia sáng trêu chọc ánh lên trong mắt anh ta, một sự tinh nghịch chỉ làm tăng thêm sự bí ẩn xung quanh anh ta. Cô ấy bắt đầu đặt quân cờ lên bàn cờ, những ngón tay nhanh nhẹn và chính xác của cô ấy làm sinh động chiến trường tương lai của chúng tôi.</p>
-
-<p>Khi cô ấy sắp xếp các mảnh, tôi nhận thấy một sự khác biệt khác: những tòa tháp đứng ở các góc của ogiban. “Những ngọn giáo truyền thống được thay thế bằng những ngọn tháp này,” cô ấy giải thích như thể đọc được suy nghĩ của tôi, “mang đến một chiều kích mới cho cuộc vui của chúng ta.”</p>
-
-<p>Các quân cờ giờ đã được bày ra, mọi quân, mọi tướng, mọi quân tốt được xếp thành một hàng hài hòa hoàn hảo. Dự đoán trận chiến sắp tới, tôi thấy mình bị cuốn hút một cách khó cưỡng vào trò chơi ghép hình mới được tiết lộ này, khiến mọi thứ trở nên hấp dẫn hơn bởi ánh sáng lung linh vàng của các mảnh ghép và ánh mắt lấp lánh của kẻ thù bí ẩn của tôi.</p>
-
-  </section>
-  <section>
-    <h2>Phiên tòa của Thần</h2>
-
-<p>Tiếng tích tắc của đồng hồ đánh dấu thời gian trôi qua, trong khi sự im lặng của trận chiến chỉ bị gián đoạn bởi tiếng động nhẹ của các quân cờ trên bàn cờ. Vị giám mục di chuyển với quyết tâm, hiệp sĩ dũng cảm nhảy lên và công chúa thống trị chiến trường với hiệu quả ấn tượng. Nhịp điệu gần như không thể nhận thấy của cuộc chiến tràn ngập căn phòng, tạo cho nó một sự căng thẳng hữu hình.</p>
-
-<p>Với kỹ năng đáng kinh ngạc, kẻ thù bí ẩn của tôi đã điều khiển các quân cờ của mình. Những người bị bắt, thay vì bị loại bỏ, đã được đưa trở lại một cách khéo léo, nhảy dù sau hàng ngũ của tôi, tạo ra một động lực thay đổi vào trận chiến. Mỗi nước cờ là một bài học về chiến thuật, quân cờ này nối với quân cờ khác bằng những sợi dây vô hình đan dệt với sự tỉ mỉ gần như phẫu thuật.</p>
-
-<p>Tôi tiếp tục, xử lý các quân cờ của mình với quyết tâm mãnh liệt, chống lại cuộc tấn công dữ dội của anh ta bằng một hàng phòng thủ được bố trí cẩn thận. Tuy nhiên, mỗi quyết định dường như sử dụng năng lượng dự trữ của tôi, mỗi động tác trở nên ngày càng nặng nề hơn để thực hiện. Mí mắt tôi bắt đầu trĩu xuống, sự mệt mỏi đang cố gắng tiếp tục.</p>
-
-<p>Và khi tôi cố gắng để mở mắt, giấc ngủ, kẻ thù lén lút đó đã chiếm lấy. Cơ thể tôi kiệt quệ, ánh đèn quán bar nhảy múa trước mắt tôi tối sầm lại. Tôi chìm vào bóng tối êm dịu, hình ảnh cuối cùng ăn sâu vào ký ức tôi là nụ cười chiến thắng của kẻ thù bí ẩn của tôi, lấp lánh như vầng trăng xa trên bầu trời đen như mực.</p>
-
-<p><img src="img/4.webp" alt="Người đàn ông gục xuống vì mệt mỏi trên ogiban, một dấu hiệu của sự kiệt sức của anh ta. Người phụ nữ, với một nụ cười tinh tế trên khuôn mặt, dường như đã sẵn sàng rời đi."></p>
-
-  </section>
-  <section>
-    <h2>Tiếng vang của bình minh</h2>
-
-<p>Thời gian dường như đã bốc hơi, bị nuốt chửng bởi bóng tối bao trùm tâm trí tôi. Quá trình chuyển đổi sang bóng tối diễn ra suôn sẻ và không ồn ào, khiến tôi phải điều hướng trong màn sương mù hoang mang. Tâm trí tôi quay cuồng trong một biển bối rối, cố gắng thoát ra khỏi bóng tối.</p>
-
-<p>Như một con thuyền lạc trong đêm, cuối cùng tôi cũng tìm được đường về với ánh sáng ban ngày. Mắt tôi mở ra trong căn phòng gần như không thay đổi, tắm trong ánh bình minh dịu nhẹ. Chiếc ogiban vẫn đứng như tôi đã rời bỏ nó, một nhân chứng thầm lặng cho trận chiến đêm qua. Tuy nhiên, ghế đối thủ của tôi giờ đã bỏ trống, khí chất bí ẩn của người phụ nữ trẻ đã tan biến như một giấc mơ lúc rạng đông.</p>
-
-<p>Người ta cảm thấy sức nặng của sự vắng mặt của anh, một sự trống rỗng không thể xác định được khiến không khí trở nên nặng nề, căn phòng trở nên yên tĩnh hơn. Ánh mắt của tôi lướt qua ogiban và dừng lại ở một tờ giấy được gấp gọn gàng bên cạnh bàn trò chơi. Tôi hơi run cầm lấy nó.</p>
-
-<p>Một từ duy nhất được ghi ở đó, &quot;Cảm ơn&quot;, kèm theo một cái tên - &quot;Komayo&quot;. Một dấu ấn tao nhã, dấu tích cuối cùng của cuộc gặp gỡ thoáng qua nhưng ấn tượng này, được dành tại Bar de la Régence chơi ogi với Komayo khó nắm bắt và hấp dẫn.</p>
-
-  </section>
 </article>
 
     </main>
