feat: new version

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="vi" dir="ltr" itemscope itemtype="http://schema.org/Article">
   <head>
-    <title>Komayo</title>
+    <title>Trò chơi shogi của quỷ</title>
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
     <meta name="keywords" content="truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei">
-    <meta property="og:title" content="Komayo">
+    <meta name="author" content="Cyril Veltin">
+    <meta property="og:title" content="Trò chơi shogi của quỷ">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:image" content="https://vi.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta property="og:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <meta property="og:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
-    <meta itemprop="name" content="Komayo">
+    <meta property="og:article:author" content="Cyril Veltin">
+    <meta itemprop="name" content="Trò chơi shogi của quỷ">
+    <meta itemprop="author" content="Cyril Veltin">
     <meta itemprop="description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
-    <meta itemprop="image" content="https://vi.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta itemprop="image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Komayo">
+    <meta name="twitter:title" content="Trò chơi shogi của quỷ">
     <meta name="twitter:description" content="Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.">
-    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta name="twitter:image" content="https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
@@ -51,27 +54,8 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#fff">
     <meta name="theme-color" content="#fff">
-    <style>
-      main article figure {
-        margin: 0;
-        padding: 0;
-      }
-
-      main article figure img {
-        border-radius: 1em;
-        max-width: 100%;
-        height: auto;
-      }
-
-      main article strong {
-        font-weight: normal;
-      }
-
-      main article em,
-      main article dfn {
-        font-style: normal;
-      }
-    </style>
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="css/pico.classless.min.css">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -81,39 +65,55 @@
           "@id": "https://vi.komayo.page/"
         },
         "inLanguage": "vi",
-        "headline": "Komayo",
+        "headline": "Trò chơi shogi của quỷ",
         "description": "Trong ánh sáng huyền bí của trăng tròn, hãy khám phá câu chuyện về Komayo, một yêu quái đầy mê hoặc trong văn hóa dân gian Nhật Bản. Quyến rũ và chết chóc, cô dụ dỗ những linh hồn lạc lối vào trò chơi ogi, hấp thụ năng lượng sống của họ và khiến họ phải chịu sự dày vò vĩnh viễn. Đó là một câu chuyện về sự hấp dẫn chết người và ham muốn không được kiểm soát, một lời cảnh báo sâu sắc về sự nguy hiểm của cám dỗ.",
-        "image": "https://vi.komayo.page/img/komayo-in-ogi-game-with-victim.webp",
+        "image": "https://vi.komayo.page/komayo-m-m-c-i-v-i-k-thu-dang-ng.webp",
         "datePublished": "2023-06-26",
-        "dateModified": "2023-06-30",
+        "dateModified": "2023-06-26",
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
         "keywords": "truyện ma, Komayo, obake, ogi, cờ tướng, yokai, yurei"
       }
     </script>
+    <style>
+      p {
+        text-align: justify;
+      }
+    </style>
   </head>
   <body>
     <main>
-      <h1>Komayo</h1>
+      <nav>
+  <ul>
+      <li><strong><ruby lang="ja">駒妖<rt lang="vi">Komayo</rt></ruby></strong></li>
+  </ul>
+  <ul>
+    <li><a href="#" aria-current="page">Truyền thuyết đô thị</a></li>
+  </ul>
+</nav>
 <article>
   <header>
-    <h2>Trò chơi chưa hoàn thành</h2>
+    <h1>Trò chơi shogi của quỷ</h1>
     <p>Người ta kể rằng ở Nhật Bản, vùng Kansai, khi trăng tròn chiếu sáng trên bầu trời cao, <strong>một sinh vật có bùa mê</strong> xuất hiện, tìm cách thu hút những người qua đường bị lạc.</p>
 
   </header>
-  <h3>Sự quyến rũ của một trò chơi nguy hiểm</h3>
   <p>Xinh đẹp và bí ẩn, <em>Komayo quyến rũ những kẻ bất hạnh</em> bằng sức quyến rũ khó cưỡng của mình. Sau đó, cô mời họ chơi <dfn title="trò chơi của vua">ogi</dfn>, một biến thể của <em title="cờ tướng">cờ vua truyền thống của Nhật Bản</em>. Những người chấp nhận lời mời của cô ấy sẽ sớm thấy mình bị cuốn vào vòng xoáy của trò chơi ly kỳ.</p>
 
-  <figure>
-    <img src="img/komayo-in-ogi-game-with-victim.webp" alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy." height="1024" width="1024">
-    <figcaption>Tuy nhiên, khi trò chơi tiếp tục, họ bắt đầu cảm thấy một sự mệt mỏi kỳ lạ ngấm dần vào xương, cuối cùng buộc họ phải chìm vào giấc ngủ không thể giải thoát được.</figcaption>
-  </figure>
-  <h3>Cái bẫy của Komayo</h3>
+  <picture>
+    <source type="image/webp" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.webp">
+    <source type="image/png" srcset="komayo-m-m-c-i-v-i-k-thu-dang-ng.png">
+    <img
+      alt="Komayo, một yokai, xuất hiện trong trò chơi ogi. Ở bên cạnh cô ấy, có thể nhìn thấy nạn nhân kiệt sức của cô ấy."
+      src="komayo-m-m-c-i-v-i-k-thu-dang-ng.png"
+      height="1024"
+      width="1024" />
+  </picture>
+  <p>Tuy nhiên, khi trò chơi tiếp tục, họ bắt đầu cảm thấy một sự mệt mỏi kỳ lạ ngấm dần vào xương, cuối cùng buộc họ phải chìm vào giấc ngủ không thể giải thoát được.</p>
+
   <p>Chính trong giấc ngủ say này, Komayo đã bộc lộ bản chất thật của mình. Cô ấy hấp thụ năng lượng quan trọng của họ, chỉ để lại một lớp vỏ trống rỗng của sức sống trước đây của cô ấy. Linh hồn của những nạn nhân bất hạnh này, giờ đã biến thành <em>yurei</em>, bị kết án trong một cuộc hành trình bất tận. Bị dằn vặt bởi mong muốn không thể cưỡng lại được gặp lại Komayo và hy vọng hoàn thành trò chơi ogi còn dang dở của mình, họ lang thang mãi mãi trong trạng thái khao khát không được thỏa mãn và hối tiếc không được thỏa mãn.</p>
 
-  <footer>
-    <h2>Mong muốn và hủy diệt</h2>
-    <p>Do đó, Komayo là hiện thân của sự nguy hiểm của <em>cám dỗ</em> và cái chết của <em>ham muốn không kiểm soát</em>. <a href="https://amzn.eu/d/7w6vHjX" rel="sponsored" target="_blank">Câu chuyện về các nạn nhân của cô ấy</a> là lời cảnh báo trước sự cám dỗ của những điều chưa biết và sự liều lĩnh theo đuổi niềm vui. Đó là một lời cảnh báo vang vọng qua các thời đại, một lời nhắc nhở về ranh giới mong manh ngăn cách ham muốn với sự hủy diệt.</p>
-
-  </footer>
 </article>
 
     </main>
